--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@
 /* features styles */
 .features {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 73px;
   padding: 3%;
@@ -123,6 +124,62 @@
 
 .features-desc {
   margin: 24px 0 32px;
+}
+
+/* features-lists-styles */
+.features-lists-container {
+  display: flex;
+  gap: 140px;
+  justify-content: space-between;
+  align-items: center;
+  margin: 70px 0 100px;
+  position: relative;
+}
+
+.features-lists-info {
+  width: 60%;
+}
+
+.features-lists-title {
+  margin-bottom: 24px;
+  border-left: 5px solid #ff900e;
+  padding-left: 21px;
+}
+
+.features-lists {
+  margin-top: 30px;
+}
+
+.features-list {
+  box-shadow: 0px 4px 30px #0000000f;
+  border-radius: 8px;
+  padding: 30px;
+  margin-bottom: 20px;
+}
+
+.article-title {
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.features-lists-img img {
+  width: 100%;
+}
+
+.experience-btn {
+  position: absolute;
+  padding: 45px 42px;
+  font-weight: 700;
+  font-size: 65px;
+  right: 23%;
+  bottom: 0%;
+}
+
+.small-text {
+  display: block;
+  font-weight: 500;
+  font-size: 25px;
 }
 
 /* mobile styles */
@@ -182,5 +239,43 @@
   .features-info {
     width: 100%;
     text-align: center;
+  }
+
+  /* features-lists styles */
+  .features-lists-container {
+    flex-direction: column;
+    text-align: center;
+    margin-top: 25px;
+    gap: 10px;
+    position: static;
+  }
+
+  .features-lists-info {
+    width: 100%;
+  }
+
+  .features-lists-title {
+    padding: 0;
+  }
+
+  .features-lists {
+    margin-top: 10px;
+  }
+
+  .features-list {
+    margin-bottom: 5px;
+  }
+
+  .experience-btn {
+    position: static;
+    padding: 20px 25px;
+    font-weight: 700;
+    font-size: 25px;
+    margin-top: 5px;
+  }
+
+  .small-text {
+    font-weight: 500;
+    font-size: 20px;
   }
 }
